--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Welcome</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" conten="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<div>Dear all,
-	<span>I took this really cool course
-	</span></div>
-	<span>on Coursera.org. I think it's
-	my favorite course I've EVER taken!
-	Here is the URL for it:
-	</span>
-	<a href="...">HTML, CSS and JS for Web Developers</a>
-	<div><a href="...">HTML, CSS and JS for Web Developers</a></div>
-	<div>
-	Does anyone know how I can give this course 6
-	out of 5 stars?
-	</div>
-	<div>
-	Thank you,
-	-Yaakov.... I mean a random student! Definitely not Yaakov.
+	<h1>My Favorite Games</h1>
+	<div class="row">
+		<div class="col-lg-3 col-md-5 col-sm-9">
+			<div class="title" id="title_1"><p>Terraria</p></div>
+			<img src="img/terraria.png">
+			<p class="content">Terraria is a land of adventure! A land of mystery! A land that's yours to shape, defend, and enjoy. Your options in Terraria are limitless. Start by building basic shelter, then dig for Ore and other resources. Discover and craft up to 300 weapons of magic, ranged, and melee varieties, as well as armor, and use them to battle hundreds of different enemies. (WiKi)</p>
+		</div>
+		<div class="col-lg-3 col-md-5 col-sm-9">
+			<div class="title" id="title_2"><p>Don't Starve</p></div>
+			<img src="img/dontstarve.png">
+			<p class="content">Don't Starve is an action-adventure game with a randomly generated open world and elements of survival and roguelike gameplay. The goal is to survive as long as possible, with a count of the number of days the player has survived shown onscreen. (Wiki)</p>
+		</div>
+		<div class="col-lg-3 col-md-11 col-sm-9">
+			<div class="title" id="title_3"><p>Dark Souls</p></div>
+			<img src="img/darksouls.png">
+			<p class="content">Dark Souls is a third-person action role-playing game. The core mechanic of the game is exploration. Players are encouraged by the game to proceed with caution, learn from past mistakes, or find alternate areas to explore. Dark Souls takes place in a large and continuous open world environment, connected through a central hub area (WiKi).</p>
+		</div>
 	</div>
 </body>
 </html>
